name:                HVG
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/CindyLinz/HVG#readme
license:             BSD3
license-file:        LICENSE
author:              Cindy Wang (CindyLinz)
maintainer:          cindylinz@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HVG
                     , HVG.Type
                     , HVG.Context2D
                     , HVG.ContextState
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , containers ==0.5.*
  default-language:    Haskell2010
  default-extensions:  GADTs
                     , LambdaCase
                     , KindSignatures
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , PatternSynonyms

executable HVG-test
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HVG
  other-modules:       Graph
                     , Entity
  default-language:    Haskell2010

executable HVG
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HVG
                     , ghc ==7.10.3
                     , ghc-paths ==0.1.*
  other-modules:       
  default-language:    Haskell2010

-- test-suite HVG-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , HVG
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CindyLinz/Haskell-HVG
